--- a/frontend/app/views/fragments/form/paymentOptions.scala.html
+++ b/frontend/app/views/fragments/form/paymentOptions.scala.html
@@ -19,7 +19,7 @@
                 <input type="radio" name="payment.annual" id="monthly" value="false"/>
                 <span class="payment-label__title">Pay monthly</span>
                 <span class="payment-label__amount">@monthAmount(targetTier)</span>
-                <span class="payment-label__note">No commitment, cancel at any time</span>
+                <span class="payment-label__note">Spread your payment across the year</span>
             </label>
         </div>
     </div>
