fix margin issues

--- a/frontend/assets/stylesheets/_mixins.scss
+++ b/frontend/assets/stylesheets/_mixins.scss
@@ -121,12 +121,17 @@
 }
 
 // a dynamic mixin so we can reuse these measurements
-// for other properties – this used to include a gutter
-// but now it just matches the width of the main page container
-// (eg. 14 columns) so it lines up all the way to the edges
-@mixin side-margins-calc($property, $container-width:gs-span(14), $offset:0px) {
-    @include mq(wide) {
-        #{$property}: -webkit-calc(((100% - #{rem($container-width)}) / 2) + #{$offset});
-        #{$property}: calc(((100% - #{rem($container-width)}) / 2) + #{$offset});
+// for other properties – the media queries and widths
+// need to match the ones in layout.scss
+@mixin side-margins-calc($property) {
+    @include mq(tablet) {
+        $width: gs-span(12);
+        #{$property}: -webkit-calc((100% - #{rem($width + $gs-gutter * 2)}) / 2);
+        #{$property}: calc((100% - #{rem($width + $gs-gutter * 2)}) / 2);
+    }
+    @include mq(mem-full) {
+        $width: gs-span(14);
+        #{$property}: -webkit-calc((100% - #{rem($width + $gs-gutter * 2)}) / 2);
+        #{$property}: calc((100% - #{rem($width + $gs-gutter * 2)}) / 2);
     }
 }
