--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -40,6 +40,11 @@ body {
     position: relative;
 }
 
+// note: the max-widths set here
+// are duplicated in mixins.scss
+// for the side-margins function
+// please duplicate your changes
+// this alignment is too perfect
 .page-container {
     @include rem((
         padding: 0 $gs-gutter/2
@@ -57,7 +62,7 @@ body {
     }
 
     @include mq(mem-full) {
-        max-width: gs-span(14);
+        max-width: gs-span(14)+($gs-gutter*2);
     }
 
     h2 {
