Added password field for social signed in users who have no set their password. Update password in Identity.

--- a/frontend/app/views/fragments/form/passwordDetail.scala.html
+++ b/frontend/app/views/fragments/form/passwordDetail.scala.html
@@ -13,7 +13,7 @@
             <input class="text-input js-password-strength js-register-password"
                    type="password"
                    id="user-password"
-                   name="user.password"
+                   name="password"
                    value=""
                    autocomplete="off"
                    autocapitalize="off"
