fix cursor again

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -20,7 +20,7 @@
                             @Benefits.details(tier).cta
                         </a>
                     } else {
-                        <span class="action action-cta--cancel">
+                        <span class="action action-cta--cancel action-cta--disabled">
                             Coming soon
                         </span>
                     }
