reworking benefits tier page. lots of magic

--- a/frontend/assets/stylesheets/pages/_tier.scss
+++ b/frontend/assets/stylesheets/pages/_tier.scss
@@ -51,6 +51,17 @@ $current-indicator: rem(47px);
         display: table-cell;
         max-width: 330px;
     }
+
+    @include mq(desktop) {
+        // this is defined in tickets.scss
+        // but we re-use the HTML for benefits tier page
+        .price-info {
+            @include fs-headline(4);
+            @include rem((
+                height: 110px // magic number
+            ));
+        }
+    }
 }
 
 .package__current-indicator {
@@ -64,12 +75,28 @@ $current-indicator: rem(47px);
     @include mq(desktop) {
         margin-top: -$current-indicator;
     }
+    // this prevents the text splitting onto 2 lines
+    @include mq($from: desktop, $to: mem-full) {
+        @include rem((
+            font-size: 14px
+        ));
+    }
 }
 
 .package__inner {
     @include rem((
         padding: $gs-gutter
     ));
+    @include mq(mem-full) {
+        @include rem((
+            height: 840px // magic number
+        ));
+    }
+    @include mq(desktop) {
+        @include rem((
+            height: 940px // magic number
+        ));
+    }
     @include border-radius(4px);
     background-color: #ffffff;
 }
@@ -126,6 +153,11 @@ $current-indicator: rem(47px);
     @include rem((
         padding-bottom: $gs-gutter
     ));
+    @include mq(desktop) {
+        @include rem((
+            height: 97px // magic number
+        ));
+    }
 }
 
 /* Upgrade
