--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -1,134 +1,142 @@
-@()
-
-@import configuration.Config
 @import views.support.Asset
 
-@promoWithImageBackground(title: String, imageBackground: String, promoClass: String, images: List[(String, String)])(content: Html) = {
-    <div class="brochure-container-outer @imageBackground">
-        <div class="brochure-container @promoClass">
-            <div class="brochure-container__inner">
-                <h2 class="section-headline section-headline--black">@title</h2>
+@main("Home Page", isBrochure = true, htmlClass = "home-page") {
 
-                <div class="l-row">
-                    @for((src, alt) <- images) {
-                        <div class="brochure-container__image"><img src="@Asset.at(src)" alt="@alt" /></div>
-                    }
-                </div>
+    @* ===== Homepage hero ===== *@
 
-                @content
-                
+    <div class="home-slice home-slice--epic u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h1 class="home-slice__headline">Introducing Guardian Membership</h1>
             </div>
-        </div>
-    </div>
-}
-
-@main("Home Page", true) {
-
-    <div class="brochure-container brochure-container--promo-one">
-        <div class="brochure-container__inner">
-            <h2 class="section-headline section-headline--border-bottom">Introducing Guardian Membership</h2>
-            <p class="brochure-container__copy">We believe the <strong>open exchange</strong> of information, ideas and opinions has the power to <strong>change the world for the better</strong></p>
-            <p class="brochure-container__copy">Guardian Membership is the community for those who share this ideal.</p>
-            <a class="action action--join" href="/about">Learn more</a>
-        </div>
-    </div>
-
-    <div class="brochure-container-outer brochure-container--white-background">
-        <div class="brochure-container brochure-container--promo-two">
-            <div class="brochure-container__inner l-row">
-                <div class="brochure-container__image"><img src="@Asset.at("images/homepage/teaser-image1.jpg")" alt="" /></div>
-                <div class="brochure-container__teaser">
-                    <p class="brochure-container__copy">Guardian Membership brings you closer to the <strong>stories</strong> of the day, connects you to the <strong>conversations</strong> that matter and introduces you to <strong>fellow members</strong> who share your interests.</p>
-                    <p class="brochure-container__copy"><a class="action action--join" id="qa-join" href="/join">Join today</a></p>
-                </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy">We believe the open exchange of information, ideas and opinions has the power to change the world for the better</p>
+                <p class="home-slice__copy">Guardian Membership is the community for those who share this ideal.</p>
+                <a class="action action--join home-slice__action" href="/about">Learn more</a>
+                <p class="home-slice__copy">We believe the open exchange of information, ideas and opinions has the power to change the world for the better</p>
+                <p class="home-slice__copy">Guardian Membership is the community for those who share this ideal.</p>
+                <a class="action action--join home-slice__action" href="/about">Learn more</a>
             </div>
         </div>
     </div>
 
-    @promoWithImageBackground("Events that bring the Guardian to life", "brochure-container--image-background-one", "brochure-container--promo-three", List("images/homepage/teaser-image1-1.jpg" -> "altText", "images/homepage/teaser-image1-2.jpg" -> "altText1")) {
-        <p class="brochure-container__copy"><strong>Guardian Live</strong> is a programme of discussions, debates, interviews, keynote speeches and festivals that brings the Guardian’s journalism to life. </p>
-        <p class="brochure-container__copy">Events that for the first time take the power of open journalism from print and digital into live experiences.</p>
-        <a class="action action--secondary-button" href="/events">See our live events</a>
-    }
+    @* ===== Bring the Guardian to life ===== *@
 
-    <div class="brochure-container-outer brochure-container--no-top-margin">
-        <div class="brochure-container brochure-container--promo-four">
-            <div class="brochure-container__inner">
-                <h2 class="section-headline section-headline--with-margins">Membership fuels our journalism</h2>
+    <div class="home-slice u-cf home-slice--red">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy">Guardian Live is a programme of discussions, debates, interviews, keynote speeches and festivals that brings the Guardian’s journalism to life. </p>
+                <p class="home-slice__copy">Events that for the first time take the power of open journalism from print and digital into live experiences.</p>
+                <a class="action action--secondary-button" href="/events">See our live events</a>
+            </div>
+        </div>
+    </div>
+
+    @* ===== Fuels our journalism ===== *@
+
+    <div class="home-slice home-slice--content u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Membership fuels our journalism</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <div class="home-slice__media">
+                    <img src="@Asset.at("images/homepage/teaser-image1.jpg")" alt="" />
+                </div>
+                <div class="home-slice__offset-copy">
+                    <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
+                    <cite class="home-slice__copy--cite">Alan Rusbridger, editor of the Guardian</cite>
+                    <a class="action action--join" href="/join/patron">Start your journey as patron</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @* ===== Big ideas ===== *@
+
+    <div class="home-slice u-cf home-slice--green">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">A home for big ideas</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy">In 2016, the Guardian will reopen the Midland Goods Shed at London’s King’s Cross. This will mark the coming together of extraordinary cultural and educational institutions with the Guardian, to create a new kind of civic space.</p>
+                <p class="home-slice__copy">The building will be a hub for big ideas and conversation, offering events, activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.</p>
                 <div class="l-row l-row--items-2">
-                    <div class="brochure-container__image"><img src="@Asset.at("images/homepage/teaser-image2.jpg")" alt="" /></div>
-                    <div class="brochure-container__teaser">
-                        <blockquote class="blockquote--black-line">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
-                        <p class="brochure-container__copy brochure-container__copy--author">Alan Rusbridger, editor of the Guardian</p>
-                        <a class="action action--join" href="/join/patron">Start your journey as patron</a>
-                    </div>
+                    <div class="l-row__item"><a class="action action--join" href="http://www.theguardian.com/membership">More about the building</a></div>
+                    <div class="l-row__item"><a class="action action--secondary-button" href="http://www.theguardian.com/membership">Building progress blog</a></div>
                 </div>
             </div>
         </div>
     </div>
 
-    @promoWithImageBackground("A home for the big ideas", "brochure-container--image-background-two", "brochure-container--promo-five", List("images/homepage/teaser-image1-1.jpg" -> "altText", "images/homepage/teaser-image1-2.jpg" -> "altText1")) {
-        <p class="brochure-container__copy">In 2016, the Guardian will reopen the Midland Goods Shed at London’s King’s Cross. This will mark the coming together of extraordinary cultural and educational institutions with the Guardian, to create a new kind of <strong>civic space.</strong></p>
-        <p class="brochure-container__copy">The building will be a hub for <strong>big ideas</strong> and <strong>conversation,</strong> offering events, activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.</p>
-        <div class="l-row l-row--items-2">
-            <div class="l-row__item"><a class="action action--join" href="http://www.theguardian.com/membership">More about the building</a></div>
-            <div class="l-row__item"><a class="action action--secondary-button" href="http://www.theguardian.com/membership">Building progress blog</a></div>
-        </div>
-    }
+    @* ===== Founding Members ===== *@
 
-    <div class="brochure-container-outer brochure-container--no-top-margin">
-        <div class="brochure-container brochure-container--promo-six">
-            <div class="brochure-container__inner">
-                <h2 class="section-headline section-headline--border-bottom">Founding members: Join us at the start</h2>
-                <div class="l-row">
-                    <div class="brochure-container__teaser">
-                        <p class="brochure-container__copy">This is membership beta. We have <strong>ambitious plans,</strong> and new features will be added regularly.  Guardian membership will grow into a vibrant, self-organising community of free-thinkers.</p>
-                        <p class="brochure-container__copy">Help <strong>build and shape this community</strong> by joining as a Founding Partner or Patron, with the guarantee that the price you pay today will never rise.</p>
-                        <a class="action action--join" href="/join">Join today</a>
-                    </div>
-                    <div class="brochure-container__image">
-                        <img src="@Asset.at("images/homepage/teaser-image1-1.jpg")" alt="" class="brochure-container__image--holder"/>
-                        <img src="@Asset.at("images/homepage/teaser-image1-2.jpg")" alt="" class="brochure-container__image--holder"/>
-                        <img src="@Asset.at("images/homepage/teaser-image2.jpg")" alt="" class="brochure-container__image--holder"/>
-                    </div>
+    <div class="home-slice home-slice--content u-cf">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Founding members: Join us at the start</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <div class="home-slice__media">
+                    <img src="@Asset.at("images/homepage/teaser-image1.jpg")" alt="" />
+                </div>
+                <div class="home-slice__offset-copy">
+                    <p class="home-slice__copy">This is membership beta. We have ambitious plans, and new features will be added regularly.  Guardian membership will grow into a vibrant, self-organising community of free-thinkers.</p>
+                    <p class="home-slice__copy">Help build and shape this community by joining as a Founding Partner or Patron, with the guarantee that the price you pay today will never rise.</p>
+                    <a class="action action--join" href="/join">Join today</a>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="brochure-container-outer brochure-container--no-top-margin">
-        <div class="brochure-container brochure-container--promo-seven">
-            <div class="brochure-container__inner">
-                <h2 class="section-headline section-headline--with-margins">Join membership today</h2>
-                <div class="l-row">
-                    <div class="brochure-container__join-box">
-                        <div class="brochure-container__join-box--header brochure-container__join-box--header--friends">Friend</div>
-                        <div class="brochure-container__price">
-                        <div class="brochure-container__price--bold-free">£FREE</div>
-                        </div>
-                        <p class="brochure-container__teaser brochure-container__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
-                        <a class="action action--secondary-button" href="/join">Learn more about membership</a>
+    @* ===== Join Today ===== *@
+
+    <div class="home-slice home-slice--join-today">
+        <div class="home-slice__inner">
+            <h2 class="home-slice__headline">Join membership today</h2>
+            <ul class="l-row u-unstyled join-today__join-boxes">
+
+                @* === Friend === *@
+
+                <li class="join-today__join-box">
+                    <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
+                    <div class="join-today__price">
+                    <div class="join-today__price--bold-free">£FREE</div>
                     </div>
-                    <div class="brochure-container__join-box">
-                        <div class="brochure-container__join-box--header brochure-container__join-box--header--partner">Partner</div>
-                        <div class="brochure-container__price l-row">
-                            <div class="brochure-container__price--bold">£135/yr<span class="save-price">Save £45/yr</span></div>
-                            <div class="brochure-container__price--bold">£15/mo</div>
-                        </div>
-                        <p class="brochure-container__teaser brochure-container__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
-                        <a class="action action--secondary-button" href="/join">Learn more about membership</a>
+                    <p class="join-today__teaser join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
+                    <a class="action action--secondary-button" href="/join">Learn more about membership</a>
+                </li>
+
+                @* === Partner === *@
+
+                <li class="join-today__join-box">
+                    <div class="join-today__join-box--header join-today__join-box--header--partner">Partner</div>
+                    <div class="join-today__price l-row">
+                        <div class="join-today__price--bold">£135/yr<span class="save-price">Save £45/yr</span></div>
+                        <div class="join-today__price--bold">£15/mo</div>
                     </div>
-                    <div class="brochure-container__join-box">
-                        <div class="brochure-container__join-box--header brochure-container__join-box--header--patron">Patron</div>
-                        <div class="brochure-container__price l-row">
-                            <div class="brochure-container__price--bold">£540/yr<span class="save-price">Save £135/yr</span></div>
-                            <div class="brochure-container__price--bold">£60/mo</div>
-                        </div>
-                        <p class="brochure-container__teaser brochure-container__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
-                        <a class="action action--secondary-button" href="/join/patron">Learn more about patron</a>
+                    <p class="join-today__teaser join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
+                    <a class="action action--secondary-button" href="/join">Learn more about membership</a>
+                </li>
+
+                @* === Patron === *@
+
+                <li class="join-today__join-box">
+                    <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
+                    <div class="join-today__price l-row">
+                        <div class="join-today__price--bold">£540/yr<span class="save-price">Save £135/yr</span></div>
+                        <div class="join-today__price--bold">£60/mo</div>
                     </div>
-                </div>
-            </div>
+                    <p class="join-today__teaser join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
+                    <a class="action action--secondary-button" href="/join/patron">Learn more about patron</a>
+                </li>
+
+
+            </ul>
         </div>
     </div>
 }
