--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -8,6 +8,7 @@ html {
     -o-background-size: cover;
     background-size: cover;
 
+    &.home-page,
     &.events-bg {
         background-attachment: fixed;
         background-repeat: repeat-y;
@@ -145,483 +146,5 @@ body {
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-}
-
-
-
-//TODO better names
-.brochure-container-outer {
-    width: 100%;
-
-    &.brochure-container--white-background {
-        background-color: $white;
-        @include rem((
-            padding: $gs-gutter 0
-        ));
-
-        @include mq(desktop) {
-            @include rem((
-                padding: $gs-gutter*3 0 $gs-gutter*2
-            ));
-        }
-    }
-
-    &.brochure-container--no-top-margin {
-        background-color: $white;
-        @include rem((
-            padding: 0 0 $gs-gutter*2
-        ));
-    }
-
-    &.brochure-container--image-background-one {
-        background: url(/assets/images/homepage/mem-bg-promo.jpg) no-repeat center center;
-        background-size: cover;
-        @include rem((
-            padding: $gs-gutter*3 0 $gs-gutter*2
-        ));
-    }
-
-    &.brochure-container--image-background-two {
-        background: url(/assets/images/homepage/mem-bg-promo2.jpg) no-repeat center center;
-        background-size: cover;
-        @include rem((
-            padding: $gs-gutter*3 0 $gs-gutter*2
-        ));
-    }
-}
-
-
-.brochure-container {
-    @include fs-headline(2);
-    background-color: $mem-trans-white;
-    @include rem((
-        padding: 0 $gs-gutter/2,
-        margin: 0 $gs-gutter/2,
-    ));
-
-    @include mq(desktop) {
-        @include fs-headline(5);
-        @include rem((
-            width: gs-span(12),
-            margin: 0 auto,
-            padding: 0 $gs-gutter
-        ));
-    }
-}
-
-// promo block one
-// =============================================================================
-
-.brochure-container--promo-one {
-    @include rem((
-        margin-bottom: $gs-gutter*2
-    ));
-
-    @include mq(tablet) {
-        @include rem((
-            padding: 0 gs-span(2) 0 $gs-column-width+$gs-gutter,
-            margin-bottom: $gs-gutter*2
-        ));
-    }
-
-    @include mq(desktop) {
-        @include rem((
-            padding: 0 gs-span(3) 0 $gs-column-width+$gs-gutter,
-            margin-bottom: $gs-gutter*2
-        ));
-    }
-    .brochure-container__inner {
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(6)
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(8)
-            ));
-        }
-    }
-
-    .section-headline--border-bottom {
-        @include rem((
-            margin-bottom: $gs-gutter/2
-        ));
-
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(6)
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(8)
-            ));
-        }
-    }
-}
-
-// promo block two
-// =============================================================================
-
-.brochure-container--promo-two {
-
-    .brochure-container__teaser {
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(7)
-            ));
-        }
-    }
-
-    .brochure-container__image {
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(4),
-                margin-right: $gs-gutter
-            ));
-        }
-    }
-}
-
-// promo block three
-// =============================================================================
-
-.brochure-container--promo-three,
-.brochure-container--promo-five {
-    background-color: $mem-live-red-trans;
-    color: $black;
-
-    @include mq(desktop) {
-        @include rem((
-            padding: 0 gs-span(3)+$gs-gutter 0 gs-span(1)+$gs-gutter
-        ));
-    }
-
-    .brochure-container__inner {
-        @include mq(tablet) {
-            width: gs-span(6);
-        }
-
-        @include mq(desktop) {
-            width: gs-span(8);
-        }
-
-        .section-headline--black {
-            border-top: $gs-gutter solid $black;
-            color: $black;
-
-            @include mq(tablet) {
-                @include rem((
-                    width: gs-span(8),
-                    margin-bottom: $gs-gutter*3
-                ));
-            }
-
-            @include mq(desktop) {
-                @include rem((
-                    width: gs-span(8),
-                    margin-bottom: $gs-gutter*3
-                ));
-            }
-        }
-
-        .brochure-container__image:first-child {
-            @include mq(desktop) {
-                @include rem((
-                    margin-right: $gs-gutter
-                ));
-            }
-        }
-    }
-}
-
-// promo block four
-// =============================================================================
-
-.brochure-container--promo-four {
-    background-color: $white;
-
-    .brochure-container__teaser {
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(7)
-            ));
-        }
-    }
-
-    .brochure-container__image {
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(3),
-                margin-right: $gs-gutter
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(4),
-                margin-right: $gs-gutter
-            ));
-        }
-    }
-}
-
-// promo block five
-// =============================================================================
-
-.brochure-container--promo-five {
-    background-color: $mem-trans-green;
-}
-
-// promo block six
-// =============================================================================
-
-.brochure-container--promo-six {
-    background-color: $white;
-
-    @include mq(desktop) {
-        @include rem((
-            padding: 0 0 0 $gs-column-width+$gs-gutter,
-            margin-bottom: $gs-gutter * 2
-        ));
-    }
-
-    .section-headline--border-bottom {
-        @include rem((
-            margin-bottom: $gs-gutter/2
-        ));
-
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(6)
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(8)
-            ));
-        }
-    }
-
-    .brochure-container__teaser {
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(8),
-                margin-right: $gs-gutter
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(8),
-                margin-right: $gs-gutter
-            ));
-        }
-    }
-    .brochure-container__image {
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(2)
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(3)
-            ));
-        }
-    }
-}
-
-// promo block seven
-// =============================================================================
-
-.brochure-container--promo-seven {
-
-    .brochure-container__inner {
-        @include mq(desktop) {
-            width: gs-span(12);
-        }
-    }
-
-    .brochure-container__join-box {
-        border: 1px solid $c-neutral5;
-        @include rem((
-            margin-bottom: $gs-gutter
-        ));
-
-        @include mq(tablet) {
-            @include rem((
-                width: gs-span(3),
-                margin-right: $gs-gutter
-            ));
-        }
-
-        @include mq(desktop) {
-            @include rem((
-                width: gs-span(4),
-                margin-right: $gs-gutter
-            ));
-
-            &:last-child {
-                margin-right: 0;
-            }
-        }
-    }
-
-    .brochure-container__join-box--header {
-        @include fs-headline(3);
-        @include rem((
-            padding: $gs-gutter $gs-gutter $gs-gutter 65px
-        ));
-        position: relative;
-
-        &:before {
-            @extend %icon-sprite;
-            @extend %icon-sprite-g-white-36;
-            content: '';
-            display: block;
-            position: absolute;
-            @include rem((
-                left: $gs-gutter,
-                top: 15px
-            ));
-        }
-
-        &.brochure-container__join-box--header--friends {
-            background-color: $c-neutral1;
-            color: $white;
-        }
-
-        &.brochure-container__join-box--header--partner {
-            background-color: $mem-brandLightblue;
-            color: $black;
-        }
-
-        &.brochure-container__join-box--header--patron {
-            background-color: $mem-brandDarkBlue;
-            color: $white;
-        }
-    }
-
-    .brochure-container__price {
-        @include fs-headline(2);
-
-        @include mq(tablet) {
-            @include fs-headline(2);
-        }
-
-        @include mq(desktop) {
-            @include fs-headline(3);
-        }
-        @include rem((
-            height: 45px,
-            margin-top: $gs-gutter
-        ));
-
-        .brochure-container__price--bold {
-            @include rem((
-                width: gs-span(2),
-                padding-left: $gs-gutter
-            ));
-
-            &:last-child {
-                text-align: right;
-            }
-        }
-
-        .brochure-container__price--bold-free {
-            @include rem((
-                width: gs-span(2),
-                padding-left: $gs-gutter
-            ));
-        }
-
-        .save-price {
-            @include fs-bodyCopy(1);
-            color: $c-neutral3;
-            display: block;
-        }
-    }
-
-    .brochure-container__teaser--description {
-        @include rem((
-            margin: $gs-gutter,
-            padding-top: $gs-gutter,
-            min-height: 120px
-        ));
-        @include fs-bodyCopy(2);
-        border-top: 1px solid $c-neutral5;
-
-        @include mq(desktop) {
-            @include fs-bodyCopy(3);
-        }
-    }
-
-    .action--join {
-        @include rem((
-            margin-left: $gs-gutter/2
-        ));
-
-        @include mq(desktop) {
-            @include rem((
-                margin-left: $gs-gutter
-            ));
-        }
-    }
-}
-
-.section-headline--with-margins {
-    @include mq(desktop) {
-        @include rem((
-            width: gs-span(8),
-            margin: 0 gs-span(3)+$gs-gutter*2 $gs-gutter*3 gs-span(1)
-        ));
-    }
-}
-
-.brochure-container__copy,
-.brochure-container__image {
-    @include rem((
-        margin-bottom: $gs-gutter
-    ));
-}
-
-.brochure-container__copy--author {
-    @include fs-headline(1);
-
-    @include mq(desktop) {
-        @include fs-headline(3);
-    }
-}
-
-blockquote {
-    font-style: italic;
-    font-weight: 300;
-    @include rem((
-        margin-bottom: 10px
-    ));
-
-    &:before {
-        @extend %icon-sprite;
-        @extend %icon-sprite-quote-blue;
-        content: '';
-        display: block;
-        float: left;
-        @include rem((
-            margin-right: 5px
-        ));
-    }
-}
-
-.blockquote--black-line {
-    border-top: 1px solid $black;
-    @include rem((
-        padding-top: 10px
-    ));
 }
 
