--- a/frontend/assets/stylesheets/_head.common.scss
+++ b/frontend/assets/stylesheets/_head.common.scss
@@ -34,6 +34,7 @@
 @import 'layout/header';
 @import 'layout/headings';
 @import 'layout/side-margins';
+@import 'layout/homeslice';
 
 /* Content
    ========================================================================== */
