--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -25,11 +25,9 @@
             </div>
             <div class="content__container content__container--border-dark content__footer">
                 <ul class="inline-list">
-                    <li class="inline-list__item"><a href="#faq">FAQ</a></li>
+                    <li class="inline-list__item"><a href="/help">Help</a></li>
                     <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item"><a href="#help">Email User help</a></li>
-                    <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item"><a href="/tier/cancel">Cancel Membership</a></li>
+                    <li class="inline-list__item"><a href="/tier/cancel">Cancel Guardian membership</a></li>
                 </ul>
             </div>
         </div>
