they call me the king of scala

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -82,7 +82,7 @@
                                     <div class="event__trail">
                                         <span class="event__trail-tag js-event-price-tag">Partners/Patrons </span>
                                         <span class="event__trail-upsell js-event-price-discount">@pricing.discountPrice</span>
-                                        <span class="event__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
+                                        <span class="event__trail-saving js-event-price-saving"> (save £@pricing.savingPrice)</span>
                                     </div>
                                 }
                             }
