--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -60,6 +60,7 @@
                                 @if(!event.city.isEmpty){ <span>@event.city</span>, }
                                 @if(!event.region.isEmpty){ <span>@event.region</span>, }
                                 @if(!event.countryName.isEmpty){ <span>@event.countryName</span> }
+                                @if(!event.postal_code.isEmpty){ <span>@event.postal_code</span> }
                             </span>
                         </div>
                         <div class="event__time"><span class="icon time--icon"></span>@prettyDateWithTime(event.start)</div>
