--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -26,10 +26,9 @@
 
                     <div class="event-item__location">
                         @if(event.venue.name){
-                            <span class="event-item__location-name">@event.venue.name</span>
+                            <span class="event-item__location-name">@event.venue.name, </span>
                         }
                         @for(address <- event.venue.address) {
-                            @if(event.venue.name){, }
                             <span class="event-item__location-address">@address.city, @address.postal_code</span>
                         }
                     </div>
