add links to nav

--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -44,6 +44,8 @@
             <div class="header__secondary">
                 <ul class="nav nav--global nav-global--mini nav--top-border-off">
                     <li><a href="http://www.theguardian.com/" class="nav__link case--lower">The Guardian</a></li>
+                    <li><a href="http://jobs.theguardian.com/" class="nav__link case--lower">Jobs</a></li>
+                    <li><a href="https://soulmates.theguardian.com/" class="nav__link case--lower">Soulmates</a></li>
                 </ul>
             </div>
 
